[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Mole/bullet.png" type="Texture" id=1]
[ext_resource path="res://src/Other/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2, 2 )

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 65536
collision_mask = 0
script = ExtResource( 2 )

[node name="Bullet" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollideWallorPlayer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 521
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollideWallorPlayer"]
shape = SubResource( 2 )

[node name="DetectEnemy" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 40962
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectEnemy"]
shape = SubResource( 3 )

[node name="BoneBlock" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoneBlock"]
shape = SubResource( 4 )

[connection signal="body_entered" from="CollideWallorPlayer" to="." method="_on_CollideWall_body_entered"]
[connection signal="body_entered" from="DetectEnemy" to="." method="_on_DetectEnemy_body_entered"]
[connection signal="body_entered" from="BoneBlock" to="." method="_on_BoneBlock_body_entered"]
